# webdataset

./: .bumpversion.cfg  .deepsource.toml  .gitignore  .sourcery.yaml  404.html  CLAUDE.md  COMMITS  COMMITS.md  FAQ.md  FAQ.txt  ISSUES.md  LICENSE  Makefile  NOTES  PROBLEMS  README.ipynb  README.md  VERSION  VERSIONS.md  dockertest  environment.yml  function-coverage  gendocs  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  readme.ipynb  requirements.dev.txt  requirements.docs.txt  requirements.txt  run-jupyterlab  search.html  setup.py  tasks.py  temp.ipynb  webdataset-demo.html  webdataset-demo.ipynb  wids_mnist.ipynb
.codeboarding/: Data_Ingestion_Layer.md  Data_Output_Writer.md  Data_Processing_Core.md  Pipeline_Orchestration_API.md  on_boarding.md
.github/workflows/: ci.yml  claude.yml  docs.yml  pypi.yml  test.yml  testpip.yml
FAQ/: index.html
column-store/: index.html
docs/: 404.html  FAQ.md  coco-to-shards.ipynb  coco-to-shards.md  column-store.md  creating.ipynb  dataset.md  decoding.ipynb  desktop.ipynb  desktop.md  falling-things-make-shards.ipynb  falling-things-make-shards.md  generate-text-dataset.md  gettingstarted.ipynb  hotitworks.ipynb  howitworks.ipynb  howitworks.md  imagenet-to-shards.ipynb  imagenet-to-shards.md  index.html  index.md  module.html.jinja2  multimodal.md  multinode.ipynb  multinode.md  pydoc.md  search.html  sharding.ipynb  sharding.md  sitemap.xml  sources.ipynb  sources.md  svhn-to-shards.ipynb  svhn-to-shards.md  tenbin.md  video-loading-example.ipynb  video-loading-example.md  webdataset-demo.ipynb  webdataset-demo.md  webdataset.md  (+5 more)
docs/api/: index.html  search.js  search.json  webdataset.html
docs/cifar10/: index.html
docs/convert-falling-things/: index.html
docs/convert-objectron/: index.html
docs/creating/: index.html
docs/decoding/: index.html
docs/desktop/: index.html
docs/falling-things-make-shards/: index.html
docs/gettingstarted/: index.html
docs/howitworks/: index.html
docs/multinode/: index.html
docs/multinode-test/: index.html
docs/objectron-conversion/: index.html
docs/old/: index.md  oldreadme.ipynb
docs/openimages/: index.html
docs/search/: search_index.json
docs/sharding/: index.html
docs/sources/: index.html
docs/video-loading-example/: index.html
docs/wordtrain/: index.html
docs/writing/: index.html
docs/ytsamples-split/: index.html
docsrc/: creating.md  index.md  objectron-conversion.ipynb  pydoc.md  sitemap.xml
docsrc/api/: search.json
docsrc/multinode/: index.html
docsrc/old/: index.html
docsrc/search/: search_index.json
docsrc/ytsamples-split/: index.html
examples/: Makefile  coco-to-shards.ipynb  column-store.ipynb  generate-text-dataset.ipynb  generate-text-dataset.out.ipynb  imagenet-to-shards.ipynb  mi-images.ipynb  mi-prompts.ipynb  run-notebooks  tesseract-wds.ipynb  train-ocr-errors-hf.ipynb  train-resnet50-multiray-wds.ipynb  train-resnet50-multiray-wids.ipynb  train-resnet50-ray.ipynb  train-resnet50-wds.ipynb  train-resnet50-wids.ipynb  train-resnet50-wids.py  train-resnet50-wsds.ipynb  wds-notes.ipynb
examples/webdataset/: index.html
examples/wids/: index.html
faqs/: 0170.md  0171.md  0172.md  0177.md  0182.md  0185.md  0187.md  0194.md  0196.md  0199.md  0201.md  0209.md  0210.md  0211.md  0212.md  0216.md  0219.md  0220.md  0225.md  0227.md  0233.md  0236.md  0237.md  0238.md  0239.md  0244.md  0245.md  0246.md  0247.md  0249.md  0256.md  0257.md  0260.md  0261.md  0264.md  0278.md  0280.md  0282.md  0283.md  0289.md  (+28 more)
generate-text-dataset/: index.html
helpers/: changes.py  docker.py  dockertest  faq.py  gendocs  versions.py
mi-images/: index.html
mi-prompts/: index.html
notebooks/: cifar10.ipynb  convert-falling-things.ipynb  creating.ipynb  decoding.ipynb  decoding.md  desktop.ipynb  gettingstarted.md  howitworks.ipynb  multinode-test.ipynb  objectron-conversion.md  openimages.ipynb  pydoc.md  video-loading-example.ipynb  wordtrain.py  writing.ipynb  writing.md  ytsamples-split.ipynb
notebooks/old/: coco-show.ipynb  coco-split.ipynb
old/: issues.ipynb  mypy.ini  setup.py
pages/: 404.html  decoding.ipynb  index.html  multinode.ipynb  search.html  sharding.ipynb
pages/commands/: index.html
pages/creating/: index.html
pages/decoding/: index.html
pages/desktop/: index.html
pages/gettingstarted/: index.html
search/: search_index.json
tesseract-wds/: index.html
test/: test_dataset.py  test_io.py  test_loader.py  test_writer.py
testdata/: augment.py  compressed.tar  crop.py  imagenet-extra.json  imagenet-shards.json  mpdata.tar  sample.tgz  tendata.tar  testgz.tar
tests/: conftest.py  test_cache.py  test_compat.py  test_decode.py  test_fluid.py  test_gopen.py  test_handlers.py  test_loaders.py  test_multimodal.py  test_pipeline.py  test_security.py  test_shardlists.py  test_utils.py  test_wids.py  test_wids_cleanup.py  test_wids_dl.py  test_wids_fqueue.py  test_wids_lru.py  test_wids_mmtar.py  test_writer.py  test_wsds_datasets.py  testconfig.py
train-ocr-errors-hf/: index.html
train-resnet50-multiray-wds/: index.html
train-resnet50-multiray-wids/: index.html
train-resnet50-wds/: index.html
train-resnet50-wids/: index.html
wds-notes/: index.html
webdataset/: __init__.py  __init__.pyi  autodecode.py  autodecode.pyi  bench.py  bench.pyi  cache.py  cborsiterators.py  checks.py  checks.pyi  compat.py  composable.py  dataset.py  dataset.pyi  datasets.py  dbcache.py  dbcache.pyi  downloader.py  dsspecs.py  extradatasets.py  filters.py  filters.pyi  fluid.py  fluid.pyi  gopen.py  gopen.pyi  handlers.py  index.html  io.py  iterators.py  iterators.pyi  loader.py  mix.py  mock.py  mock.pyi  multi.py  multi.pyi  multiexpand.py  pipeline.py  pytorch.py  (+18 more)
webdataset2/: index.html
wids/: __init__.py  index.html  wids.py  wids_bench.py  wids_cleanup.py  wids_decode.py  wids_dir.py  wids_dl.py  wids_downloader.py  wids_fqueue.py  wids_index.py  wids_lru.py  wids_mmtar.py  wids_specs.py  wids_tar.py
wsds/: README.md  __init__.py  dataloader.py  datasets.py  mixer.py  transformations.py
(+151 files in other folders)
