[tool.poetry]
name = "webdataset"
version = "0.3.0"
description = "A Python library for managing and processing dataset archives."
authors = ["Thomas Breuel <tmbdev@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/webdataset/webdataset"
repository = "https://github.com/webdataset/webdataset"
# requires-python = ">=3.10"
# Use the src layout for editable installs.
packages = [
    { include = "webdataset", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
braceexpand = "*"
numpy = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = { version = "*", extras = ["jupyter"] }
build = "*"
bump2version = "*"
flake8 = "*"
imageio = "*"
invoke = "*"
isort = "*"
jupyter = "*"
jupyterlab = "*"
lmdb = "*"
matplotlib = "*"
mkdocs = "*"
mkdocs-autorefs = "*"
mkdocs-jupyter = "*"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocs-minify-plugin = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
msgpack = "*"
mypy = "*"
nbconvert = "*"
notebook = "*"
papermill = "*"
pdm = "*"
Pillow = "*"
pre-commit = "*"
pydocstyle = "*"
pytest = "*"
pytest-cov = "*"
pytorch_lightning = "*"
ray = { version = "*", extras = ["default", "tune"] }
ruff = "*"
scipy = "*"
setuptools = "*"
torch = "*"
torchvision = "*"
transformers = "*"
twine = "*"
typer = "*"
wheel = "*"
icecream = "*"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90"]
ignore = ["E712", "F541"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[tool.bumpversion.files]
pyproject.toml = 'version = "{current_version}"'
# src/webdataset/__init__.py = '__version__ = "{current_version}"'

# [tool.pre-commit]
# repos = [
#     { repo = "local", hooks = [
#         { id = "black", name = "black", entry = "black .", language = "system", pass_filenames = false },
#         { id = "isort", name = "isort", entry = "isort .", language = "system", pass_filenames = false },
#         { id = "pytest-quick", name = "pytest-quick", entry = "pytest -v -m quick", language = "system", pass_filenames = false }
#     ] }
# ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
