[project]
name = "webdatasetng"
version = "0.3.1"
description = "A Python library for managing and processing dataset archives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Thomas Breuel", email = "tmbdev@gmail.com" }
]

# Main runtime dependencies.
dependencies = [
  "braceexpand",
  "numpy",
  "pyyaml"
]

# Development-only dependencies (as a “dev” extra).
[project.optional-dependencies]
dev = [
  "autoflake",
  "bandit",
  "black[jupyter]",
  "build",
  "bump2version",
  "flake8",
  "imageio",
  "isort",
  "jupyter",
  "jupyterlab",
  "lmdb",
  "matplotlib",
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocs-minify-plugin",
  "mkdocstrings",
  "mkdocstrings-python",
  "msgpack",
  "mypy",
  "nbconvert",
  "notebook",
  "papermill",
  "pdm",
  "Pillow",
  "pre-commit",
  "pydocstyle",
  "pytest",
  "pytest-cov",
  "pytorch_lightning",
  "ray[default,tune]",
  "ruff",
  "scipy",
  "setuptools",
  "torch",
  "torchvision",
  "transformers",
  "twine",
  "typer",
  "wheel",
  "icecream"
]

# Tool-specific settings (these remain unchanged)
[tool.black]
line-length = 120
target-version = ["py310"]
include = '^src/.*'

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90"]
ignore = ["E712", "F541", "C901", "E741"]
exclude = ["examples"]

[tool.pre-commit]
repos = [
  { repo = "local", hooks = [
      { id = "black", name = "black", entry = "black .", language = "system", pass_filenames = false },
      { id = "isort", name = "isort", entry = "isort .", language = "system", pass_filenames = false },
      { id = "pytest-quick", name = "pytest-quick", entry = "pytest -v -m quick", language = "system", pass_filenames = false }
  ] }
]

